--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "noliebe",
   "devDependencies": {
+    "@rollup/plugin-html": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "7.32.0",
