--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,10 +8,10 @@
     "extends":
      [
         // "airbnb-base",
+        "prettier",
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended"
         // "plugin:@typescript-eslint/parser",
-        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -19,13 +19,13 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint",
-        
-        "prettier"
+        "prettier",
+        "@typescript-eslint"
     ],
     "rules": {
         // prettier
-        "prettier/prettier": "error"
+        // "prettier/prettier": "error"
+        "prettier/prettier": "warn"
     }
   }
   
