--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "rollup-plugin-typescript2": "^0.35.0",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "vue": "^3.3.4"
   }
 }
